tests/ui/typeck/issue-91328.stderr
error[E0529]: expected an array or slice, found `Vec<i32>`
  --> $DIR/issue-91328.rs:10:12
   |
LL |         Ok([a, b]) => a + b,
   |            ^^^^^^ pattern cannot match with input type `Vec<i32>`
   |
help: consider using `as_deref` here
   |
LL |     match r.as_deref() {
   |            +++++++++++

error[E0529]: expected an array or slice, found `Vec<i32>`
  --> $DIR/issue-91328.rs:20:14
   |
LL |         Some([a, b]) => a + b,
   |              ^^^^^^ pattern cannot match with input type `Vec<i32>`
   |
help: consider using `as_deref` here
   |
LL |     match o.as_deref() {
   |            +++++++++++

error[E0529]: expected an array or slice, found `Vec<i32>`
  --> $DIR/issue-91328.rs:30:9
   |
LL |         [a, b] => a + b,
   |         ^^^^^^ pattern cannot match with input type `Vec<i32>`
   |
help: consider slicing here
   |
LL |     match v[..] {
   |            ++++

error[E0529]: expected an array or slice, found `Box<[i32; 2]>`
  --> $DIR/issue-91328.rs:40:14
   |
LL |         Some([a, b]) => a + b,
   |              ^^^^^^ pattern cannot match with input type `Box<[i32; 2]>`
   |
help: consider using `as_deref` here
   |
LL |     match a.as_deref() {
   |            +++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0529`.
